@@ -5,4 +5,7 @@
 #define DIR_SEP_STR     "/"
 #define LIST_MINSIZE	6
 #define LIST_SPACEPOS   5
+
+/* signal.c */
+void got_sig(int signal);
 #endif /* COMMON_H */
